--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
     <div class="banner">
       <app-navbar></app-navbar>
       <div class="content">
-        <h1>DESIGN BY YOUR PATH</h1>
+        <h1>DESIGN YOUR PATH</h1>
         <p>When you get tired, learn to rest,not quit</p>
         <div>
           <button type="button" (click)="goToAboutPage()"><span></span>Go to about page</button>
